@@ -1,3 +1,8 @@
+2002-10-24  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* ecosadmin.tcl (ecosadmin::process_add_package): Use gzip -d, not
+	gunzip, as the latter fails with TCL on cygwin.
+
 2002-10-18  Gary Thomas  <gthomas@ecoscentric.com>
 
 	* ecos.db: Change package name for TS1000 flash part (consistency).
